added change password logic
