# backend/cmd/auth/main.go
@@ -83,6 +83,9 @@ func main() {
 	//Update Email route
 	http.Handle("/auth/me/email", middleware.AuthMiddleware(jwtSecret)(http.HandlerFunc(h.UpdateEmail)))
 
+	//Change password route
+	http.Handle("/auth/me/password", middleware.AuthMiddleware(jwtSecret)(http.HandlerFunc(h.ChangePassword)))
+
 	//Swagger UI Route
 	http.Handle("/swagger/", httpSwagger.Handler(
     httpSwagger.URL("http://localhost:8080/swagger/doc.json"), // Force the URL
